Data Ingestion notebook done

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -11,6 +11,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\kafub\\\\Dropbox\\\\PC\\\\Desktop\\\\Python_and ML_BootCamp_from _Udemy\\\\NLP_Folder\\\\TextSummarizerProject\\\\research'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -26,32 +46,12 @@
     }
    ],
    "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\kafub\\\\Dropbox\\\\PC\\\\Desktop\\\\Python_and ML_BootCamp_from _Udemy\\\\NLP_Folder\\\\TextSummarizerProject\\\\research'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "%pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "'c:\\\\Users\\\\kafub\\\\Dropbox\\\\PC\\\\Desktop\\\\Python_and ML_BootCamp_from _Udemy\\\\NLP_Folder\\\\TextSummarizerProject'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,10 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Preparing data entity\n",
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
@@ -98,20 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from TextSummarizer.constants import*\n",
-    "from TextSummarizer.utils.common import read_yaml, create_directories"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Data configuration task\n",
+    "from TextSummarizer.constants import*\n",
+    "from TextSummarizer.utils.common import read_yaml, create_directories\n",
+    "\n",
     "class ConfigurationManager:\n",
     "    def __init__(\n",
     "        self,\n",
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,18 +193,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-08 21:18:29,163:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-09-08 21:18:29,163:INFO:common:yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-08 21:18:29,170:INFO:common:created directory at: artifacts]\n",
-      "[2024-09-08 21:18:29,172:INFO:common:created directory at: artifacts/data_ingestion]\n",
-      "[2024-09-08 21:18:34,460:INFO:1434958058:artifacts/data_ingestion/archive%20(2).zip download! with following info: \n",
+      "[2024-09-09 15:53:26,909:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-09-09 15:53:26,920:INFO:common:yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-09 15:53:26,922:INFO:common:created directory at: artifacts]\n",
+      "[2024-09-09 15:53:26,923:INFO:common:created directory at: artifacts/data_ingestion]\n",
+      "[2024-09-09 15:53:28,842:INFO:1434958058:artifacts/data_ingestion/archive%20(2).zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 8377572\n",
       "Cache-Control: max-age=300\n",
@@ -213,19 +215,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: B946:14B87:2B553CD:2DB6A36:66DE7718\n",
+      "X-GitHub-Request-Id: 8E12:3AF53F:2766A5D:299173D:66DF7C67\n",
       "Accept-Ranges: bytes\n",
-      "Date: Mon, 09 Sep 2024 04:18:33 GMT\n",
+      "Date: Mon, 09 Sep 2024 22:53:28 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-sjc1000086-SJC\n",
+      "X-Served-By: cache-pao-kpao1770027-PAO\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1725855513.803156,VS0,VE584\n",
+      "X-Timer: S1725922408.934741,VS0,VE474\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 614a1e7d63902fd30cdf4e25e1f8139a9251e994\n",
-      "Expires: Mon, 09 Sep 2024 04:23:33 GMT\n",
+      "X-Fastly-Request-ID: b17e831514909c7bc45d0ff4f0c8cbe61cdd8eda\n",
+      "Expires: Mon, 09 Sep 2024 22:58:28 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
