Data Validation is done

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -89,6 +89,7 @@
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
+    "#Data Ingestion entity\n",
     "@dataclass(frozen=True)\n",
     "class DataIngestionConfig:\n",
     "    root_dir: Path\n",
@@ -161,6 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Data ingestion code\n",
     "class DataIngestion:\n",
     "    def __init__(self, config: DataIngestionConfig):\n",
     "        self.config = config\n",
@@ -235,6 +237,7 @@
     }
    ],
    "source": [
+    "#Data Ingestion pipeline\n",
     "try:\n",
     "    config = ConfigurationManager()\n",
     "    data_ingestion_config = config.get_data_ingestion_config()\n",
